--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 </head>
 <body>
     <main role="main">
+        <div class="container container--large">
+            <nav class="nav">
+                <div class="nav-group">
+                    <span class="nav-item fw7">BethanyDoula.com</span>
+                </div>
+                <div class="nav-group">
+                    <a class="nav-item btn" href="tel:301-455-5599">(301) 455-5599</a>
+                    <a class="nav-item btn" href="mailto:BethanyDoula27@gmail.com">BethanyDoula27@gmail.com</a>
+                </div>
+            </nav>
+        </div>
+        <div class="container">
+            <section class="card card--greeting">
+                <h3 class="fw9">
+                    Hello, my name is Bethany Silva and I'm a dona trained doula.
+                </h3>
+            </section>
+            <section class="card card--construction">
+                <h3 class="fw9">
+                    My Webpage is under construction, be sure to check back soon!
+                </h3>
+            </section>
+        </div>
     </main>
 </body>
 </html>
