--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <main role="main">
         <div class="container">
             <nav class="btn-group">
-                <a class="btn btn--urgent fw7" href="tel:301-455-5599">Call</a>
+                <a class="btn btn--urgent fw7" href="tel:301-455-5599"><em>Call</em></a>
                 <em class="btn btn--text text--urgent px0">or</em>
-                <a class="btn btn--urgent fw7" href="mailto:BethanyDoula27@gmail.com">Email</a>
+                <a class="btn btn--urgent fw7" href="mailto:BethanyDoula27@gmail.com"><em>Email</em></a>
             </nav>
             <section class="card card--greeting">
                 <h3 class="fw9">
